gcc/testsuite/rust/rustc/ui/parser/removed-syntax-fn-sigil.rs
fn main() {
    let x: fn~() = || (); // { dg-error "" "" { target *-*-* } }
}

